--- a/Tex/conclusions.tex
+++ b/Tex/conclusions.tex
@@ -10,6 +10,7 @@ This note is by no means a complete, end-all analysis of the MCS code; there are
 
 Additional avenues to further this analysis include:
 \begin{itemize}
+	\item Determining the impact that spacecharge (electric field nonuniformities most significant near the edges of the TPC) has on the MCS algorith. This study should likely be prioritized!
 	\item Determining if the MCS algorithm can be used for muon/pion discrimination (pions should have more larger-angle hard scatters than muons).
 	\item Quantifying the performance of the MCS algorithm as a function of track angle (which is briefly explored in Appendix \ref{AngleStudy_MCBNBRecoTrack_section}).
 	\item Using calorimetry to determine energy loss upstream of a segment rather than assuming average MIP deposited energy or using an integral of the PDG stopping power curve... this will be best especially for cases where large amounts of energy is lost to delta rays.
