update with last minute comments from tim bolton to the PUB

--- a/MCS_JINST/MCS_JINST_main.tex
+++ b/MCS_JINST/MCS_JINST_main.tex
@@ -35,9 +35,9 @@
 % \emailAdd{first@one.univ}
 
 
-\abstract{Liquid argon time projection chambers (LArTPCs) are an important detector technology for neutrino physics. This technology provides precise three-dimensional reconstruction of charged particle tracks that traverse the detector medium. 
+\abstract{%Liquid argon time projection chambers (LArTPCs) are an important detector technology for neutrino physics. This technology provides precise three-dimensional reconstruction of charged particle tracks that traverse the detector medium. 
 %The MicroBooNE experiment is a LArTPC at the Fermi National Accelerator laboratory with active volume dimensions of 2.6 m width $\times$ 2.3 m height $\times$ 10.4 m length located in the Booster Neutrino Beamline (BNB) which has a peak neutrino energy of about 0.7 GeV. 
-We discuss a technique for measuring a charged particle's momentum by means of multiple Coulomb scattering (MCS) in the MicroBooNE LArTPC, which does not require the full particle ionization track to be contained inside of the detector volume as other track momentum reconstruction methods do (range-based momentum reconstruction and calorimetric momentum reconstruction). We motivate use of this technique, prescribe a tuning of the underlying theory formula, quantify its performance on fully contained beam-neutrino-induced muon tracks both in simulation and in data, and quantify its performance on exiting muon tracks in simulation. We find agreement between data and simulation for contained tracks, with a small bias in the momentum reconstruction and with resolutions that vary as a function of track length, decreasing from about 10\% for the shortest (one meter long) tracks to 5\% for longer (several meter) tracks. For exiting muons with at least one meter of track contained, we find a similarly small bias, and a resolution which is better than 15\% for muons with momentum below 2 GeV/c though worse at higher momenta due to detector resolution effects.}
+We discuss a technique for measuring a charged particle's momentum by means of multiple Coulomb scattering (MCS) in the MicroBooNE liquid argon time projection chamber (LArTPC), which does not require the full particle ionization track to be contained inside of the detector volume as other track momentum reconstruction methods do (range-based momentum reconstruction and calorimetric momentum reconstruction). We motivate use of this technique, prescribe a tuning of the underlying theory formula, quantify its performance on fully contained beam-neutrino-induced muon tracks both in simulation and in data, and quantify its performance on exiting muon tracks in simulation. We find agreement between data and simulation for contained tracks, with a small bias in the momentum reconstruction and with resolutions that vary as a function of track length, decreasing from about 10\% for the shortest (one meter long) tracks to 5\% for longer (several meter) tracks. For exiting muons with at least one meter of track contained, we find a similarly small bias, and a resolution which is better than 15\% for muons with momentum below 2 GeV/c though worse at higher momenta due to detector resolution effects.}
 
 
 % \keywords{Only keywords from JINST's keywords list please}
@@ -65,7 +65,9 @@ We discuss a technique for measuring a charged particle's momentum by means of m
 
 \section{Introduction and Motivation}\label{sec:intro}
 
-MicroBooNE (Micro Booster Neutrino Experiment) is an R\&D experiment that uses a large Liquid Argon Time Projection Chamber (LArTPC) to investigate the excess of low energy events observed by the MiniBooNE experiment \cite{Aguilar-Arevalo:2013pmq} and to study neutrino-argon cross-sections. MicroBooNE is part of the Short-Baseline Neutrino (SBN) \cite{SBNwhitepaper} physics program at the Fermi National Accelerator Laboratory (Fermilab) along with two other LArTPCs: the Short Baseline Near Detector (SBND) and the Imaging Cosmic And Rare Underground Signal (ICARUS) detector. MicroBooNE also performs important research and development in terms of detector technology and event reconstruction techniques for future LArTPC experiments including DUNE (Deep Underground Neutrino Experiment).\\
+In this paper we summarize the theory of multiple Coulomb scattering (MCS) and describe how the underlying Highland formula is retuned based on Monte Carlo simulation for use specifically in liquid argon time projection chambers (LArTPCs). We present a maximum likelihood based algorithm that is used to determine the momentum of particles in a LArTPC. The only way to determine the momentum of a particle that exits a TPC is through MCS measurements. We demonstrate that this technique works for a sample of fully contained muons from Booster Neutrino Neam (BNB) $\nu_\mu$ charged-current (CC) interactions, with bias and resolutions quantified. Additionally, quantification of performance on exiting tracks is presented.\\
+
+MicroBooNE (Micro Booster Neutrino Experiment) is an R\&D experiment that uses a large LArTPC to investigate the excess of low energy events observed by the MiniBooNE experiment \cite{Aguilar-Arevalo:2013pmq} and to study neutrino-argon cross-sections. MicroBooNE is part of the Short-Baseline Neutrino (SBN) \cite{SBNwhitepaper} physics program at the Fermi National Accelerator Laboratory (Fermilab) along with two other LArTPCs: the Short Baseline Near Detector (SBND) and the Imaging Cosmic And Rare Underground Signal (ICARUS) detector. MicroBooNE also performs important research and development in terms of detector technology and event reconstruction techniques for future LArTPC experiments including DUNE (Deep Underground Neutrino Experiment).\\
 
 % \begin{figure}[ht!]
 % \centering
@@ -77,10 +79,7 @@ The MicroBooNE detector \cite{ub_detectorpaper} consists of a rectangular time p
 
 A set of 32 photomultiplier tubes (PMTs) and three planes of wires with 3 mm spacing at angles of 0, and $\pm$ 60 degrees with respect to the vertical are located in the TPC for event reconstruction. The cathode plane operating voltage is -70 kV. In a neutrino interaction, a neutrino from the beam interacts with an argon nucleus and the charged outgoing secondary particles traverse the medium, losing energy and leaving an ionization trail. The resulting ionization electrons drift to the anode side of the TPC, containing the wire planes. The passage of these electrons past the first two wire planes induces a signal in them, and their collection on the third plane also generates a signal. These signals are used to create three distinct two-dimensional views (in terms of wire and time) of the event. Combining these wire signals with timing information from the PMTs allows for full three-dimensional reconstruction of the event. The fiducial volume used in this analysis is defined as the full TPC volume reduced by 20 cm from both the cathode plane and the anode wire planes, by 26.5 cm from both the top and bottom walls of the TPC, by 20 cm from the beam-entering wall of the TPC, and by 36.8 cm from the beam-exiting wall of the TPC. This fiducial volume, corresponding to a mass of 55 tons, was chosen to reduce the impact of electric field nonuniformities near the edges of the TPC which have been characterized in parts of the TPC where the effect is expected to be the largest, but not fully calibrated out in data \cite{SCE_publicnote}.\\
 
-The Booster Neutrino Beam (BNB) is predominantly composed of muon neutrinos ($\nu_\mu$) with a peak neutrino energy of about 0.7 GeV, some of which undergo charge-current ($\nu_\mu$CC) interactions in the TPC and produce muons. For muon tracks that are completely contained in the TPC, it is straightforward to calculate their momentum with a measurement of the length of the particle's track, or with calorimetric measurements which come from wire signal size measurements. Around half of the muons from BNB $\nu_\mu$CC interactions in MicroBooNE are not fully contained in the TPC, and therefore using a length-based or calorimetry-based method to determine the momenta for these uncontained tracks is not a possibility. The only way to compute the energy of a non-contained three-dimensional track is by means of multiple Coulomb scattering (MCS). \\
-
-In this paper we summarize the theory of multiple Coulomb scattering and describe how the underlying Highland formula is retuned based on MC simulation for use specifically in liquid argon. We present a maximum likelihood based algorithm that is used to determine the momentum of particles in a LArTPC and demonstrate that this technique works for a sample of fully contained muons from BNB $\nu_\mu$CC interactions, with bias and resolutions quantified. Additionally, quantification of performance on exiting tracks is presented.
-
+The Booster Neutrino Beam (BNB) is predominantly composed of muon neutrinos ($\nu_\mu$) with a peak neutrino energy of about 0.7 GeV, some of which undergo charge-current ($\nu_\mu$CC) interactions in the TPC and produce muons. For muon tracks that are completely contained in the TPC, it is straightforward to calculate their momentum with a measurement of the length of the particle's track, or with calorimetric measurements which come from wire signal size measurements. Around half of the muons from BNB $\nu_\mu$CC interactions in MicroBooNE are not fully contained in the TPC, and therefore using a length-based or calorimetry-based method to determine the momenta for these uncontained tracks is not a possibility; the only way to determine their momenta is through MCS. \\
 
 \section{Multiple Coulomb Scattering (MCS)}
 
